add encrypt/decrypt function

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,12 @@ default-features = false
 [dependencies.clear_on_drop]
 version = "0.2"
 
+[dependencies.aes-soft]
+version = "^0.3.2"
+
+[dependencies.block-modes]
+version = "^0.3.2"
+
 [dev-dependencies]
 hex = "^0.3"
 bincode = "^0.9"
