--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "ed25519-dalek"
 version = "1.0.0-pre.1"
-authors = ["isis lovecruft <isis@patternsinthevoid.net>"]
+authors = ["isis lovecruft <isis@patternsinthevoid.net>", "namuyan <thhjuuATyahoo.co.jp>"]
 readme = "README.md"
 license = "BSD-3-Clause"
-repository = "https://github.com/dalek-cryptography/ed25519-dalek"
+repository = "https://github.com/namuyan/ed25519-dalek"
 homepage = "https://dalek.rs"
 documentation = "https://docs.rs/ed25519-dalek"
 keywords = ["cryptography", "ed25519", "curve25519", "signature", "ECC"]
