--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,10 @@ categories = ["cryptography", "no-std"]
 description = "Fast and efficient ed25519 EdDSA key generations, signing, and verification in pure Rust."
 exclude = [ ".gitignore", "TESTVECTORS", "res/*" ]
 
+[lib]
+name = "nem_ed25519_rust"
+crate-type = ["lib", "cdylib"]
+
 [badges]
 travis-ci = { repository = "dalek-cryptography/ed25519-dalek", branch = "master"}
 
@@ -44,6 +48,11 @@ version = "^0.3.2"
 [dependencies.block-modes]
 version = "^0.3.2"
 
+[dependencies.pyo3]
+version = "0.6.0-alpha.4"
+features = ["extension-module"]
+optional = true
+
 [dev-dependencies]
 hex = "^0.3"
 bincode = "^0.9"
@@ -62,3 +71,4 @@ yolocrypto = ["curve25519-dalek/yolocrypto"]
 u64_backend = ["curve25519-dalek/u64_backend"]
 u32_backend = ["curve25519-dalek/u32_backend"]
 avx2_backend = ["curve25519-dalek/avx2_backend"]
+pylib = ["pyo3"]
